# openusd-materialx

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
docs/: gitlab-and-github-automation.md  materialx-standalone-wheel.md  packaging-notes.md
examples/: simple_usd_materialx_check.py
scripts/: _build_utils.py  build_materialx_python_bundle.py  build_openusd_bundle.py  materialx_build.py  repair_wheel.py  validate_bundle.py
src/openusd_materialx/: __init__.py  __main__.py  bootstrap.py
src/pxr/: __init__.py
tests/: test_import.py  test_usdmtlx.py
